--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,19 +1,21 @@
-apiVersion : apps/v1
-kind : Deployment 
-metadata :
-  app: mywebapp-deployment 
-spec: 
-  replicas : 4
-  selector :
-    matchLabels: 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mywebapp-deployment
+spec:
+  replicas: 4 
+  selector:
+    matchLabels:
       app: mywebapp
   template:
-    metadata: 
+    metadata:
       labels:
         app: mywebapp
     spec:
-      containers: 
-        -name : mywebapp 
-        image : shivani1128/sample:latest 
-      port :
-        -containerPorts : 5000
+      containers:
+      - name: mywebapp
+        image: shivani1128/sample:latest
+
+        ports:
+
+        - containerPort: 5000
