--- a/service.yaml
+++ b/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
-kind: Service 
-metadata: 
-  app: mywebapp-service 
-spec: 
+kind: Service
+metadata:
+  name: mywebapp-service
+spec:
   selector:
-    app: mywebapp 
+    app: mywebapp
   ports:
-    -protocol: TCP 
-    port: 5000
-    targetPort : 5000
-    nodePort : 30080 
-  type: NodePort 
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
+      nodePort: 30080
+  type: NodePort
   
